--- a/Bets4Fun/Web.config
+++ b/Bets4Fun/Web.config
@@ -7,10 +7,7 @@
     <add key="X-Response-Control" value="minified"/>
   </appSettings>
   <connectionStrings>
-    <!--<add name="Bets4FunConnectionString" connectionString="Data Source=SMICHAN-KOMP\MSSQLSERVER2012;Initial Catalog=ZakladyPilkarskie_Brasil2014;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="Bets4FunConnectionString" connectionString="Data Source=SMICHAN-KOMP;Initial Catalog=ZakladyPilkarskie_Empty;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="Bets4FunConnectionString" connectionString="Data Source=.;Initial Catalog=Bets4Fun;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <!--<add name="Bets4FunConnectionString" connectionString="Password=*Gf@*M8mZzrg5U;Persist Security Info=True;User ID=bets_4fun_user;Initial Catalog=Bets4Fun;Data Source=LT003935" providerName="System.Data.SqlClient"/>-->
+    <add name="Bets4FunConnectionString" connectionString="Data Source=.;Initial Catalog=Bets4Fun;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <!--<location path="App_Themes/Default">
       <system.web>
@@ -23,7 +20,7 @@
     <mailSettings>
       <!--<smtp from="b3ts4fun@gmail.com">-->
       <smtp deliveryMethod="Network" from="Bets4Fun &lt;b3ts4fun@gmail.com&gt;" >
-        <network host="smtp.gmail.com" password="gcvrzqjzgwywmrsq" port="587" userName="b3ts4fun@gmail.com" enableSsl="true"  />
+        <network host="smtp.gmail.com" password="replaceme" port="587" userName="b3ts4fun@gmail.com" enableSsl="true"  />
       </smtp>
     </mailSettings>
   </system.net>
