--- a/Bets4Fun/Web.config
+++ b/Bets4Fun/Web.config
@@ -7,7 +7,7 @@
     <add key="X-Response-Control" value="minified"/>
   </appSettings>
   <connectionStrings>
-    <add name="Bets4FunConnectionString" connectionString="Data Source=.;Initial Catalog=Bets4Fun;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
+    <add name="Bets4FunConnectionString" connectionString="Data Source=.;Initial Catalog=Bets4Fun;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--<location path="App_Themes/Default">
       <system.web>
